hphp/hack/test/typecheck/tconst/tconst_with_static.php.like_types.exp
File "tconst_with_static.php", line 16, characters 12-13:
Invalid return type (Typing[4110])
File "tconst_with_static.php", line 9, characters 19-21:
Expected int
File "tconst_with_static.php", line 15, characters 27-44:
  resulting from expanding the type constant Test::TC_ID::ALIAS
File "tconst_with_static.php", line 5, characters 22-29:
  then expanding the type constant IntID::ID
File "tconst_with_static.php", line 16, characters 12-13:
But got string
